<resources>
    <string name="app_name">bizaia</string>
    <string name="app_id">af92948c58ab402dbb7164cdeec2d423</string>
    <string name="more_press_exit">再び押すとクィットアウトする</string>
    <string name="app_page_discovery">情報</string>
    <string name="app_page_video">動画</string>
    <string name="app_page_live">ライブ</string>
    <string name="app_page_monthly">情報誌</string>
    <string name="app_page_self_center">マイページ</string>
    <string name="app_logout_other">あなたのアカウントは別のデバイスで登録中で、ログアウトして、再ログインしてください.</string>
    <string name="app_erro_net">ネットワークエラー</string>
    <string name="login_activity_login_title">ログイン</string>
    <string name="login_activity_login_btn">ログイン</string>
    <string name="login_activity_register_btn">新規登録</string>
    <string name="login_activity_forget_password">パスワードを忘れたら</string>
    <string name="login_activity_login_name_hint">携帯番号あるいはメールアドレスをご入力ください</string>
    <string name="login_activity_password_hint">パスワード</string>
    <string name="login_activity_as_guest_login">まずお試し</string>
    <string name="login_activity_other_login">SNSアプリで直接ログインする</string>
    <string name="login_activity_other_login_error">第三方にログインして失敗する</string>
    <string name="login_name_null">ユーザー名をご入力ください</string>
    <string name="login_pwd_null">パスワードをご入力ください</string>
    <string name="login_error">ログイン失敗です</string>
    <string name="login_success">ログインしました</string>
    <string name="login_pop_forget">パスワードを取り戻す</string>
    <string name="login_pop_find_phone">携帯番号で取り戻す</string>
    <string name="login_pop_find_email">メールアドレスで取り戻す</string>
    <string name="register_activity_register_title">新規登録</string>
    <string name="register_activity_get_code">SMS認証コードを取得</string>
    <string name="register_activity_place_hint">国・地域選択</string>
    <string name="register_activity_phone_hint">携帯番号</string>
    <string name="register_activity_code_hint">SMS認証コード</string>
    <string name="register_activity_register_btn">次へ</string>
    <string name="register_activity_please_select_country">携帯番号の所在地をご選択ください</string>
    <string name="register_activity_please_input_phone">正しい携帯番号をご入力ください</string>
    <string name="register_activity_please_input_code">SMS認証コードをご入力ください.</string>
    <string name="nick_name">ニックネーム</string>
    <string name="complete">完成</string>
    <string name="please_input_password">パスワードをご入力ください</string>
    <string name="please_true_password">パスワードをご確認ください</string>
    <string name="please_input_nick_name">ニックネームをご入力ください</string>
    <string name="two_password_is_not_same">ニックネームが同じではないので、正しいのをご入力ください</string>
    <string name="register_error">新規登録失敗です</string>
    <string name="register_success">新規登録成功です</string>
    <string name="update_date_error">データ更新失敗です</string>
    <string name="null_data">該当データがありません</string>
    <string name="error_data">データエラー</string>
    <string name="mine_title">マイページ</string>
    <string name="mine_please_perfect_info">個人情報をご入力ください</string>
    <string name="mine_has_perfect_info">プロフィール変更はこちらへ</string>
    <string name="mine_open_more_function">もっと素晴らしい機能はこちらへ</string>
    <string name="mine_account">アカウント</string>
    <string name="mine_purchase">マイ購入</string>
    <string name="mine_attention">マイフォロー</string>
    <string name="mine_collection">お気に入り</string>
    <string name="mine_magazine">オフラインで月刊誌の閲覧</string>
    <string name="mine_account_balance">残高</string>
    <string name="mine_recharge">チャージ</string>
    <string name="mine_deal">取引明細</string>
    <string name="mine_news">ニュース</string>
    <string name="mine_live">ライブ</string>
    <string name="mine_video">動画</string>
    <string name="mine_magazine_text">情報誌</string>
    <string name="mine_buy_detail_tips">下記のQRコードで入場してください</string>
    <string name="mine_change_avatar">プロフィール画像の変更</string>
    <string name="mine_info">個人情報</string>
    <string name="mine_please_input">ご入力お願いします</string>
    <string name="mine_nick_name">ニックネーム変更</string>
    <string name="mine_phone_change">携帯番号の変更</string>
    <string name="mine_email_change">メールアドレス変更</string>
    <string name="mine_pass_change">パスワード変更</string>
    <string name="mine_code">SMS認証コードを取得</string>
    <string name="mine_phone_hint">携帯番号の変更</string>
    <string name="mine_email_hint">新しいメールアドレスをご入力ください</string>
    <string name="mine_email_phone_hint">メールアドレスまたは携帯番号をご入力ください</string>
    <string name="mine_nickname_hint">ニックネームをご入力ください</string>
    <string name="mine_code_hint">SMS認証コードをご入力ください</string>
    <string name="mine_old_pwd">旧パスワードをご入力ください</string>
    <string name="mine_new_pwd">新しいパスワードをご入力ください</string>
    <string name="mine_new_pwd_queren">新しいパスワードを再確認</string>
    <string name="mine_enter">確認</string>
    <string name="mine_info_change">プロフィール</string>
    <string name="mine_company_introduce">紹介</string>
    <string name="mine_company_chair">情報</string>
    <string name="mine_company_video">動画</string>
    <string name="mine_associ">サークル</string>
    <string name="mine_recruit">求人</string>
    <string name="mine_logout">ログアウト</string>
    <string name="mine_share">友達にシェアする</string>
    <string name="month_create">データはダウンロードリストに入れました</string>
    <string name="perfect_title">資料を記入する</string>
    <string name="perfect_must">必須</string>
    <string name="perfect_name">名前</string>
    <string name="perfect_name_hint"></string>
    <string name="perfect_fake_name">カタカナ</string>
    <string name="perfect_fake_name_hint"></string>
    <string name="perfect_mail">メール</string>
    <string name="perfect_mail_hint"></string>
    <string name="perfect_birthday">生年月日</string>
    <string name="perfect_birthday_hint"></string>
    <string name="perfect_gender">性別</string>
    <string name="perfect_man">男性</string>
    <string name="perfect_woman">女性</string>
    <string name="perfect_please_select_hint">選んでください</string>
    <string name="perfect_professional">職業</string>
    <string name="perfect_industry">業界</string>
    <string name="perfect_position">職種</string>
    <string name="perfect_post">役職</string>
    <string name="perfect_place">国</string>
    <string name="perfect_not_must">任意</string>
    <string name="perfect_phone">電話</string>
    <string name="perfect_phone_hint"></string>
    <string name="perfect_company">社名</string>
    <string name="perfect_company_hint"></string>
    <string name="perfect_personal_web">個人ウェブサイト</string>
    <string name="perfect_personal_web_hint"></string>
    <string name="perfect_company_web">公式サイト</string>
    <string name="perfect_company_web_hint"></string>
    <string name="perfect_ok">確認</string>
    <string name="perfect_bizaia_rule">&lt;BIZAIA利用规约&gt;</string>
    <string name="perfect_agree">に同意する</string>
    <string name="perfect_please_input_name">名前をご入力ください</string>
    <string name="perfect_please_input_fake_name">カタカナをご入力ください</string>
    <string name="perfect_please_input_mail">メールアドレスが間違います</string>
    <string name="perfect_please_input_birthday">生年月日をご入力ください</string>
    <string name="perfect_please_select_professional">職業をご入力ください</string>
    <string name="perfect_please_select_industry">業界をご入力ください</string>
    <string name="perfect_please_select_position">職種をご入力ください</string>
    <string name="perfect_please_select_post">役職をご入力ください</string>
    <string name="perfect_please_select_place">国をご入力ください</string>
    <string name="perfect_please_agree">＜BIZAIA利用規約＞に同意して、お続いてください</string>
    <string name="perfect_change_success">プロフィールデータが更新されました</string>
    <string name="perfect_change_error">プロフィールデータの更新が失敗しました</string>
    <string name="live_teacher">講師：</string>
    <string name="live_num_limit">定員：</string>
    <string name="live_material">テキスト資料</string>
    <string name="live_enter">ライブルーム</string>
    <string name="live_player_camre">カメラ画面</string>
    <string name="live_player_nums">観客数  </string>
    <string name="live_palyer_im_send">発表</string>
    <string name="live_im_enter">質問リクエストが同意されたので、今から質問を出しますか。</string>
    <string name="live_remind_txt">アラームを設置しました。これから視聴料をお支払いしますか？</string>
    <string name="live_pay_tips">お試し視聴は終了です。お続きますか。</string>
    <string name="live_im_start">質問</string>
    <string name="live_im_cancel">キャンセル</string>
    <string name="live_pay_enter">購入</string>
    <string name="live_pay_cancel">キャンセル</string>
    <string name="live_remind_enter">はい、今すぐ</string>
    <string name="live_remind_cancel">お試し視聴後で</string>
    <string name="live_dis_atteion">フォロー解除</string>
    <string name="live_atteion">フォロー</string>
    <string name="live_im_wait">繋がっています</string>
    <string name="live_start_date">放送日：</string>
    <string name="live_cost">視聴費：</string>
    <string name="live_teacher_s">講師：</string>
    <string name="live_number_limit">定員：</string>
    <string name="live_state_advance">予告</string>
    <string name="live_state_living">ライブ配信中</string>
    <string name="live_number">観客数</string>
    <string name="live_tag_foreshow">予告</string>
    <string name="live_tag_live">ライブ配信中</string>
    <string name="live_tag_end">ライブ配信終了</string>
    <string name="live_attention">にフォローしました</string>
    <string name="live_attention_erro">フォロー失敗です</string>
    <string name="live_dis_attention">にフォロー解除しました</string>
    <string name="live_dis_attention_error">フォロー解除失敗です</string>
    <string name="live_collection">お気に入りに登録しました</string>
    <string name="live_collection_error">お気に入り登録失敗</string>
    <string name="live_dis_collection">お気に入りに解除しました</string>
    <string name="live_dis_collection_error">お気に入り解除失敗</string>
    <string name="live_dis_online">コメントする</string>
    <string name="live_info">ライブ情報</string>
    <string name="live_courseware">テキスト資料</string>
    <string name="live_recommend">オススメ</string>
    <string name="live_new">新着</string>
    <string name="live_my_lecture">マイライブ</string>
    <string name="live_unlogin_error">まず、ログインしてください</string>
    <string name="live_pdf_unsave">文書資料をダウンロード中です</string>
    <string name="video_collection">お気に入り</string>
    <string name="video_dis_collection">お気に入り解除</string>
    <string name="video_has_wartch">お試し視聴は既に終了しました。続いて視聴しようとしたら、まず視聴料金を支払ってください。</string>
    <string name="video_look_back">ライブ再生</string>
    <string name="video_video">動画</string>
    <string name="video_audio">音声</string>
    <string name="video_sold">有効期間</string>
    <string name="about_company_name">BIZAIA.CO.,LTD</string>
    <string name="about_company_title">社名</string>
    <string name="about_place_title">所在地</string>
    <string name="about_place">1044/14 Soi Sukhumvit 44/2 PhraKhanong,Klongtoey,Bangkok10110（タイ本社）</string>
    <string name="about_build_time_title">設立日</string>
    <string name="about_build_time">2011年7月1日</string>
    <string name="about_worker_num_title">従業員数</string>
    <string name="about_worker">20名</string>
    <string name="about_work_detail_title">事業案内</string>
    <string name="about_work_detail">●ネットラジオの運営、雑誌の発行\n●ウェブ・テレビ、モバイル端末の連動に関連するソリューション提供\n●インターネットモバイルコンテンツの企画・開発・運営\n●オンライン広告媒体の制作・運営\n●ECサイト運営、通信機器・インターネット関連機器の開発・販売</string>
    <string name="about_phone_title">電話</string>
    <string name="about_phone">062-709-0720（タイ）</string>
    <string name="about_email_title">Email</string>
    <string name="about_email">asia@bizaia.com</string>
    <string name="setting_advice">ご意見</string>
    <string name="setting_advice_words">当アプリについて意見がございましたら、下記の欄にご記入ください。皆様の貴重なご意見を参考または返答させていただきますので、どうぞよろしくお願いします。</string>
    <string name="setting_submit">確認</string>
    <string name="about_operator">運営者について</string>
    <string name="buy_during">購読月数：</string>
    <string name="buy_price">購読費用：</string>
    <string name="during_start">から</string>
    <string name="during_end">まで</string>
    <string name="buy_date_time">購読期間：</string>
    <string name="unit_monthy">月</string>
    <string name="message_input">ご質問またはご意見をお書きください</string>
    <string name="find_pwd_hint_email">メールアドレスをご入力ください</string>
    <string name="pay_add_success">チャージ成功しました</string>
    <string name="pay_add_result">#チャージしましたので、\n現在の残高は#になりました</string>
    <string name="pay_result_end">確認</string>
</resources>