<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_normal_bar" />

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/cr595959"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:text="test"
        android:textColor="@color/cr_1156bf"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="5dp"
        android:background="@color/crD8D8D8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/buy_date_time"
        android:textColor="@color/cr595959"
        android:textSize="15sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="space_around"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">


        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="2017-3-8"
            android:textColor="@color/cr_1156bf"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/during_start"
            android:textColor="@color/cr595959"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="2017-3-8"
            android:textColor="@color/cr_1156bf"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/during_end"
            android:textColor="@color/cr595959"
            android:textSize="15sp" />
    </com.google.android.flexbox.FlexboxLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:alignContent="space_around"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/buy_during"
            android:textColor="@color/cr595959" />

        <TextView
            android:id="@+id/during_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="90"
            android:textColor="@color/cr_1156bf"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_monthy"
            android:textColor="@color/cr595959"
            android:textSize="15sp" />

    </com.google.android.flexbox.FlexboxLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:alignContent="space_around"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/buy_price"
            android:textColor="@color/cr595959" />

        <TextView
            android:id="@+id/puy_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="$90"
            android:textColor="@color/cr_1156bf"
            android:textSize="17sp" />


    </com.google.android.flexbox.FlexboxLayout>


    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/round_1156bf_radius_4"
        android:gravity="center"
        android:text="确认以及支付"
        android:textColor="@color/crFFFFFF"
        android:textSize="15sp" />
</LinearLayout>