<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crFFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@drawable/layout_shadow"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/action_bar_height"
            android:layout_height="@dimen/action_bar_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_pay_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/mine_recharge"
            android:textColor="@color/cr_2e2e2e"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="20dp"
            android:src="@drawable/icon_kefu" />
    </FrameLayout>
    <ImageView
        android:id="@+id/ivResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:src="@drawable/icon_chongzhi01"/>
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cr595959"
            android:layout_marginTop="23dp"
            android:textSize="24sp"
            android:text="@string/pay_add_success"/>
        <TextView
            android:id="@+id/tvResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cr595959"
            android:layout_marginTop="24dp"
            android:textSize="15sp"
            android:lineSpacingExtra="17dp"
            android:gravity="center_horizontal"
            android:text="@string/pay_add_result"/>
        <TextView
            android:id="@+id/tvEnter"
            android:layout_width="255dp"
            android:layout_height="34dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/add_money_btn_background"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/cr009944"
            android:text="@string/pay_result_end"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>